[package]
name = "sqlvec"
version = "0.0.1"
edition = "2021"
description = "A generic container for vectors allowing for rusqlite operations"

readme = "README.md"

keywords = ["rusqlite", "sqlite", "vec", "container", "wrapper"]
authors = ["Owen Friedman <5-pebble@protonmail.com>"]
repository = "https://github.com/5-pebbles/sqlvec"
homepage = "https://github.com/5-pebbles/sqlvec"

license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = ">=0.27,<=0.30"
serde = { version = "1.0.196", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
